...
            "state": "translated",
            "value": "關於"
          }
        }
      }
    },
    "Accept": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Accept"
...
            "state": "translated",
            "value": "請連接相同的 WiFi 網路以傳輸檔案"
          }
        }
      }
    },
    "Connected": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Connected"
...
            "state": "translated",
            "value": "已停用的功能將自動拒絕收到的請求。"
          }
        }
      }
    },
    "Disconnect": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Disconnect"
...
            "state": "translated",
            "value": "離線"
          }
        }
      }
    },
    "Go online": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Go online"
...
            "state": "translated",
            "value": "與現有資料合併"
          }
        }
      }
    },
    "Message": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Message"
...
